--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
 		"@tailwindcss/vite": "^4.1.18",
 		"@types/better-sqlite3": "^7.6.13",
+		"@types/uuid": "^10.0.0",
 		"drizzle-kit": "^0.31.8",
 		"svelte": "^5.45.6",
 		"svelte-check": "^4.3.4",
@@ -30,6 +31,7 @@
 	"dependencies": {
 		"better-sqlite3": "^12.6.2",
 		"drizzle-orm": "^0.45.1",
-		"sharp": "^0.34.5"
+		"sharp": "^0.34.5",
+		"uuid": "^13.0.0"
 	}
 }
