--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"vite": "^7.2.6"
 	},
 	"dependencies": {
+		"@nozbe/microfuzz": "^1.0.0",
 		"better-sqlite3": "^12.6.2",
 		"drizzle-orm": "^0.45.1",
 		"sharp": "^0.34.5",
