feat(06-01): install Chart.js and create reports utilities
- Add Chart.js v4.5.1 for charting
- Create src/lib/utils/reports.ts with helper functions:
  - getMonthLabel: Extract short month name from date
  - getQuarterLabel: Get quarter label (Q1-Q4) from date
  - calculatePercentChange: Compute percent change between periods
  - getMonthsInFiscalYear: Get array of YYYY-MM for fiscal year
  - TAX_SET_ASIDE_RATE: Default 25% tax set-aside constant

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 	"dependencies": {
 		"@nozbe/microfuzz": "^1.0.0",
 		"better-sqlite3": "^12.6.2",
+		"chart.js": "^4.5.1",
 		"drizzle-orm": "^0.45.1",
 		"sharp": "^0.34.5",
 		"uuid": "^13.0.0"
