--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
 		"@sveltejs/kit": "^2.49.1",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
 		"@tailwindcss/vite": "^4.1.18",
+		"@types/archiver": "^7.0.0",
 		"@types/better-sqlite3": "^7.6.13",
+		"@types/papaparse": "^5.5.2",
 		"@types/pdfkit": "^0.17.4",
 		"@types/uuid": "^10.0.0",
 		"drizzle-kit": "^0.31.8",
