feat(08-04): add recurring templates schema and rrule dependency
- Install rrule library for recurring pattern generation
- Add recurring_templates table with rrule storage
- Add recurring_template_tags junction table for tag allocations
- Add skipped_instances table to track voided occurrences
- Add recurring_template_id column to transactions table
- Add migrations for all new tables

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"drizzle-orm": "^0.45.1",
 		"papaparse": "^5.5.3",
 		"pdfkit": "^0.17.2",
+		"rrule": "^2.8.1",
 		"sharp": "^0.34.5",
 		"uuid": "^13.0.0"
 	}
