--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"vite": "^7.2.6"
 	},
 	"dependencies": {
+		"@fontsource-variable/inter": "^5.2.8",
 		"@nozbe/microfuzz": "^1.0.0",
 		"archiver": "^7.0.1",
 		"better-sqlite3": "^12.6.2",
